# tokio_schannel

./: Cargo.toml  README.md
.github/workflows/: windows.yml
src/: allow_std.rs  builder.rs  guard.rs  lib.rs  tls_stream.rs
tests/: google.rs
