[package]
name = "tokio_schannel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schannel = "0.1.20"
tokio = "1.23.0"

[dev-dependencies]
tokio = { version = "1.23.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
